feat(server): insight-server 支持 JDK 17
与 Agent 对齐 Java 17 字节码；Docker/CI 改用 temurin 17；替换 List.getFirst 等 JDK 21 API。
无 Docker 时 java -jar 亦可用 JDK 17。